[package]
name = "hero_workshop_core"
version = "0.1.0"
authors = ["Jacob Kiesel <kieseljake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.18"

[build-dependencies]
protobuf-codegen-pure = "2.18"