[package]
name = "hero_workshop_core"
version = "0.1.0"
authors = ["Jacob Kiesel <kieseljake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = {version = "2.18", features = ["with-serde"] }
rlua = "0.17"
rlua_serde = "0.4"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
protobuf-codegen-pure = "2.18"

[features]
default = ["with-serde"]
with-serde = []
