cmake_minimum_required(VERSION 3.13)
project(hero_workshop_core_cpp_tests)
set(CMAKE_CXX_STANDARD 14)
add_executable(hero_workshop_core_cpp_tests main.cpp ../hero_workshop_core.cpp)
target_include_directories(hero_workshop_core_cpp_tests PRIVATE ..)
target_link_directories(hero_workshop_core_cpp_tests PRIVATE ../target/debug/)
target_link_libraries(hero_workshop_core_cpp_tests PRIVATE hero_workshop_core)
if(WIN32)
  target_link_libraries(hero_workshop_core_cpp_tests PRIVATE ws2_32 userenv)
endif()